# egent-code-plexus

./: .gitattributes  .gitignore  .gnxignore  .mergify.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FOLLOWUPS.md  NOTICES.md  README.md  README_zh-TW.md  SECURITY.md  deny.toml  index.html  install.ps1  install.sh  pyproject.toml  release-plz.toml  test_route_embed.py  tsan-suppressions.txt
crates/cgn-analyzer/: Cargo.toml  build.rs
crates/cgn-analyzer/src/: ast_test.rs  calls.rs  entry_points.rs  framework_helpers.rs  lib.rs  parse_budget.rs  preproc_fallback.rs  route_detector.rs
crates/cgn-analyzer/tests/: bash_named.rs  bash_source_imports.rs  c_binding_kind.rs  c_cpp_macro_fallback.rs  c_macros.rs  c_named.rs  c_round1_fix.rs  c_type_annotations.rs  c_typedef_struct.rs  cairo_named.rs  cairo_visibility.rs  concurrency_graph_builder_order.rs  cpp_constructor.rs  cpp_extern_c_linkage.rs  cpp_frameworks.rs  cpp_local_var_filter.rs  cpp_method_classification.rs  cpp_namespace_macro.rs  cpp_out_of_class_destructor.rs  cpp_pointer_return_methods.rs  cpp_preproc_ifdef_guard.rs  cpp_template_class_member.rs  cpp_template_macro_body.rs  cpp_type_annotations.rs  cpp_union.rs  crystal_named.rs  crystal_visibility.rs  csharp_dead_path_emission.rs  csharp_enum.rs  csharp_frameworks.rs  csharp_local_var_filter.rs  csharp_namespace.rs  dart_constructor_enum_annotation.rs  dart_extension_trait.rs  dart_frameworks.rs  dart_function_dedup.rs  dart_local_var_filter.rs  dart_method_classification.rs  dart_mixin_trait.rs  dart_type_annotations.rs  (+91 more)
crates/cgn-cli/: Cargo.toml
crates/cgn-cli/examples/: probe_comm.rs  summarize_poc.rs
crates/cgn-cli/src/: auto_ensure.rs  background.rs  commit_lookup.rs  config_parser.rs  engine.rs  git_state.rs  graph_path.rs  hint.rs  lib.rs  main.rs  output.rs  parse_cache.rs  reanalyze.rs  repo_identity.rs  repo_selector.rs  search.rs
crates/cgn-cli/tests/: admin_group_cmd.rs  admin_index_fast_path.rs  admin_index_force_test.rs  admin_index_registry_sync.rs  admin_mcp_test.rs  admin_sessions_list_test.rs  admin_smoke.rs  admin_verify_resolver_test.rs  analyze_here_cmd.rs  analyze_routing.rs  auto_ensure.rs  blind_spots_python.rs  build_mode.rs  build_orchestrator.rs  class_membership_inspect.rs  cli_help_surface_test.rs  cli_surface.rs  cli_surface_invariants.rs  commit_lookup.rs  compute_hits_tantivy.rs  concurrency_hook_flock.rs  config_cmd.rs  config_php_swift.rs  context_cmd.rs  context_cypher_edge_metadata.rs  contracts_cmd.rs  coverage_build_payload.rs  coverage_cmd.rs  cypher_aggregation.rs  cypher_content.rs  cypher_error_messages.rs  cypher_multi_hop.rs  cypher_toon_format.rs  diff_baseline_resolve_test.rs  diff_bindings_test.rs  diff_build_payload.rs  diff_contracts_test.rs  diff_output_test.rs  diff_routes_test.rs  diff_section_all_test.rs  (+100 more)
crates/ecp-cli/: Cargo.toml  build.rs
crates/ecp-cli/examples/: bench_parse_pipeline.rs  bench_sidecar.rs  dump_uid_collisions.rs  probe_comm.rs  summarize_poc.rs
crates/ecp-cli/src/: auto_ensure.rs  background.rs  cli.rs  commit_lookup.rs  config_parser.rs  engine.rs  git_cache.rs  git_state.rs  graph_path.rs  hint.rs  incremental.rs  lib.rs  main.rs  native.rs  output.rs  parse_cache.rs  reanalyze.rs  repo_identity.rs  repo_selector.rs  search.rs  subprocess.rs  telemetry_cli.rs  walker_filter.rs
crates/ecp-cli/tests/: admin_group_cmd.rs  admin_index_fast_path.rs  admin_index_force_test.rs  admin_index_registry_sync.rs  admin_mcp_test.rs  admin_sessions_list_test.rs  admin_smoke.rs  admin_verify_resolver_test.rs  analyze_here_cmd.rs  analyze_routing.rs  auto_ensure.rs  blind_spots_python.rs  build_mode.rs  build_orchestrator.rs  class_membership_inspect.rs  cli_help_surface_test.rs  cli_surface.rs  cli_surface_invariants.rs  commit_lookup.rs  compute_hits_tantivy.rs  concurrency_hook_flock.rs  config_cmd.rs  config_php_swift.rs  context_cmd.rs  context_cypher_edge_metadata.rs  contracts_cmd.rs  coverage_build_payload.rs  coverage_cmd.rs  custom_graph_no_fallback.rs  cypher_aggregation.rs  cypher_content.rs  cypher_error_messages.rs  cypher_multi_hop.rs  cypher_toon_format.rs  diff_a_mode_test.rs  diff_baseline_resolve_test.rs  diff_bindings_test.rs  diff_build_payload.rs  diff_contracts_test.rs  diff_output_test.rs  (+147 more)
crates/ecp-core/: Cargo.toml
crates/ecp-core/benches/: bfs_bench.rs
crates/ecp-core/examples/: detached_marker_child.rs  registry_writer_child.rs
crates/ecp-core/src/: config.rs  error.rs  graph.rs  graph_query.rs  lib.rs  pool.rs  telemetry.rs  uid.rs
crates/ecp-core/tests/: atomic_write.rs  atomic_write_concurrent.rs  commit_dirname.rs  commit_meta.rs  concurrency_registry_writers.rs  concurrency_string_pool_intern.rs  config_group.rs  cypher_uid_migration.rs  cypher_where_label_test.rs  daemon.rs  graph_schema.rs  mmap_test.rs  overlay_merge_zero_copy.rs  peer_concern.rs  peer_inbox.rs  peer_registry.rs  peer_retention.rs  registry_audit.rs  registry_lifecycle.rs  registry_lock.rs  registry_path.rs  registry_store.rs  repo_meta.rs  session_meta.rs  session_overlay_symbols.rs  uid_canonical.rs
crates/ecp-mcp/: Cargo.toml
crates/ecp-mcp/src/: argv.rs  group.rs  lib.rs  peers.rs  schema.rs  schema_mcp.rs  server.rs  spawn.rs  telemetry.rs
crates/ecp-mcp/tests/: group_tools.rs  peers_tools.rs  schema_tools.rs  server_smoke_test.rs  spawn_test.rs  telemetry_test.rs
crates/gnx-analyzer/: Cargo.toml
crates/gnx-analyzer/examples/: test_vyper.rs
crates/gnx-analyzer/src/: calls.rs  embeddings.rs  framework_helpers.rs  lib.rs  route_detector.rs
crates/gnx-cli/: Cargo.toml
crates/gnx-cli/examples/: summarize_poc.rs
crates/gnx-cli/src/: engine.rs  git_state.rs  graph_path.rs  lib.rs  main.rs  reanalyze.rs  search.rs
crates/gnx-cli/tests/: analyze_routing.rs  blind_spots_python.rs  query.rs  (+15 more)
crates/gnx-core/: Cargo.toml
crates/graph-nexus-analyzer/: Cargo.toml  build.rs
crates/graph-nexus-cli/: Cargo.toml
crates/graph-nexus-core/: Cargo.toml
crates/graph-nexus-mcp/: Cargo.toml
packaging/pypi/: .gitignore  README.md  build_wheels.py  pyproject.toml
(+2157 files in other folders)
