[workspace]
members = [
    "crates/cgn-core",
    "crates/cgn-analyzer",
    "crates/cgn-cli",
    "crates/cgn-mcp",
]
# vendor 內 grammar crates 仍透過 path dep 引用，但不視為 workspace member ──
# 避免 cargo / clippy --workspace --all-targets 編到 vendor 自身的 #[cfg(test)] 區塊
# （tree-sitter-move 的測試 mod 依賴 tree-sitter，但 vendor Cargo.toml 沒列為 dev-dep）。
exclude = [
    "crates/vendor/tree-sitter-cairo",
    "crates/vendor/tree-sitter-move",
    "crates/vendor/tree-sitter-nim",
    "crates/vendor/tree-sitter-swift",
    "crates/vendor/tree-sitter-vyper",
]
resolver = "2"

[workspace.package]
version = "0.2.3"
edition = "2021"
authors = ["E-NoR"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/coseto6125/code-graph-nexus"
homepage = "https://github.com/coseto6125/code-graph-nexus"
keywords = ["git", "code-intelligence", "graph"]
categories = ["development-tools"]

# 工作區層級 lints 設定。目前無 override；後續可在此精準 allow/warn/deny
# 特定 lint 規則，所有 crate 透過 [lints] workspace = true opt-in。
[workspace.lints.clippy]

# Distribution release profile — used for `cargo install --git` and
# the GitHub Release artifact build. Runtime focus (not size, not
# build-time): whole-program LTO + single codegen unit lets the
# compiler inline across crate boundaries. Build time ~3-4x default
# release; only matters for the once-per-version distribution build.
#
# Standard `cargo build --release` keeps the default profile (fast
# build, no LTO) so dev loops and CI test runs stay snappy.
#
# Local install with this-CPU instruction set (Skylake AVX, etc.):
#   RUSTFLAGS="-C target-cpu=native" cargo install --git <url> \
#     --profile release-dist
# target-cpu=native is opt-in via env var because the resulting binary
# only runs on the build host's CPU family — wrong choice for the
# distribution binary, but right for a user installing onto their own
# machine.
[profile.release-dist]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
