[package]
name = "egent-code-plexus"
description = "EgentCodePlexus — code intelligence graph for AI agents and LLMs (multi-language AST analysis)"
version = "0.2.4"
edition.workspace = true
default-run = "ecp"
license.workspace = true
repository.workspace = true

# cargo-binstall 元資料：使 `cargo binstall egent-code-plexus` 直接抓 GitHub Release 預編 binary，
# 跳過 source compile。{ target } / { archive-suffix } / { binary-ext } 由 binstall 依平台自動代入。
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/ecp-v{ version }-{ target }{ archive-suffix }"
bin-dir = "ecp-v{ version }-{ target }/{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[[bin]]
name = "ecp"
path = "src/main.rs"

[lib]
name = "ecp_cli"
path = "src/lib.rs"

[dependencies]
ecp-core = { path = "../ecp-core", version = "0.2.4" }
ecp-analyzer = { path = "../ecp-analyzer", version = "0.2.4" }
ecp-mcp = { path = "../ecp-mcp", version = "0.2.4" }
tokio = { version = "1", features = ["rt"] }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
memmap2 = "0.9.10"
rkyv = "0.8.16"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
etoon = { version = "0.4", default-features = false }
ignore = "0.4.25"
libc = "0.2"
mimalloc = { version = "0.1", default-features = false }
rayon = "1.10"
tantivy = "0.26.1"
tempfile = "3.27"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1.12.3"
ratatui = "0.30"
crossterm = "0.29"
toml = "1.1"
rustc-hash = "2"
hex = "0.4"
dialoguer = "0.12"
fs2 = "0.4"
notify = "8"
walkdir = "2"
uuid = { version = "1", features = ["v7"] }
tree-sitter = "0.26"
tree-sitter-go = "*"
tree-sitter-python = "*"
tree-sitter-typescript = "*"
tree-sitter-java = "*"
tree-sitter-rust = "*"
streaming-iterator = "0.1.9"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["process", "signal"] }

[lints]
workspace = true
