[package]
name = "ecp-core"
description = "EgentCodePlexus — core graph storage and algorithms (zero-copy on-disk graph, registry, community detection)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# Not published to crates.io — distribution is GitHub Release binaries + npm + PyPI.
# (The vendored tree-sitter deps are path/git with no crates.io version, so this
#  crate could not be `cargo publish`ed anyway.)
publish = false

[dependencies]
rkyv = "0.8.16"
tree-sitter = "0.26"
rayon = "1.10.0"
crossbeam-channel = "0.5.12"
ignore = "0.4.22"
anyhow = "1.0.82"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs2 = "0.4"
url = "2.5"
unicode-normalization = "0.1"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
fixedbitset = "0.5.7"
rustc-hash = "2"
toml = "1.1"
regex = "1"
tracing = "0.1"
phf = { version = "0.13", features = ["macros"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
memmap2 = "0.9.10"
smallvec = "1.13"
compact_str = "0.9"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["process", "signal"] }

[build-dependencies]
cc = "1.0.94"

[dev-dependencies]
tempfile = "3.27.0"
memmap2 = "0.9.10"
filetime = "0.2"
criterion = "0.8.2"

[lints]
workspace = true

[[bench]]
name = "bfs_bench"
harness = false
