[package]
name = "ecp-mcp"
description = "MCP server library backing `ecp mcp serve` — tools derived by clap::Command introspection"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0"
clap = "4.5"
ecp-core = { path = "../ecp-core", version = "0.3.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "process"] }
rmcp = { version = "1", features = ["server", "transport-io"] }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }

[lints]
workspace = true
