[package]
name = "gnx-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
gnx-core = { path = "../gnx-core" }
tree-sitter = "0.25"
tree-sitter-typescript = "*"
rayon = "1.10.0"
crossbeam-channel = "0.5.12"
ignore = "0.4.22"
anyhow = "1.0.82"
tracing = "0.1.40"
streaming-iterator = "0.1.9"
tree-sitter-rust = "*"
tree-sitter-python = "*"
tree-sitter-java = "*"
tree-sitter-go = "*"
tree-sitter-javascript = "*"
tree-sitter-php = "*"
tree-sitter-ruby = "*"
tree-sitter-kotlin = { git = "https://github.com/fwcd/tree-sitter-kotlin" }
tree-sitter-c-sharp = "*"
tree-sitter-c = "*"
tree-sitter-cpp = "*"
tree-sitter-swift = { path = "../vendor/tree-sitter-swift" }
tree-sitter-dart = "*"
tree-sitter-md = "*"
fastembed = "5"
hf-hub = "0.5.0"
tree-sitter-yaml = "0.7.2"
tree-sitter-lua = "0.5.0"
tree-sitter-bash = "0.25.1"
tree-sitter-solidity = "1.2.13"
tree-sitter-crystal = { git = "https://github.com/crystal-lang-tools/tree-sitter-crystal" }
tree-sitter-move = { path = "../vendor/tree-sitter-move" }
tree-sitter-containerfile = "0.8.0"
