[package]
name = "gnx-cli"
version = "0.1.0"
edition = "2021"
default-run = "gnx-rs"

[[bin]]
name = "gnx-rs"
path = "src/main.rs"

[dependencies]
gnx-core = { path = "../gnx-core" }
gnx-analyzer = { path = "../gnx-analyzer" }
clap = { version = "4.5.4", features = ["derive"] }
serde_json = "1.0.115"
memmap2 = "0.9.10"
rkyv = "0.8.16"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
etoon = "0.4"
ignore = "0.4.25"
