[package]
name = "gnx-rs"
description = "Unofficial Rust reimplementation of GitNexus — code intelligence engine with 14-language AST analysis and BGE-M3 semantic search"
version = "0.1.0"
edition = "2021"
default-run = "gnx"

[[bin]]
name = "gnx"
path = "src/main.rs"

[lib]
name = "gnx_cli"
path = "src/lib.rs"

[dependencies]
gnx-core = { path = "../gnx-core" }
gnx-analyzer = { path = "../gnx-analyzer" }
clap = { version = "4.5.4", features = ["derive"] }
serde_json = "1.0.115"
memmap2 = "0.9.10"
rkyv = "0.8.16"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
etoon = "0.4"
ignore = "0.4.25"
fastembed = "5"
rayon = "1.10"
tantivy = "0.26.1"
tempfile = "3.27"
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"
