[package]
name = "gnx-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rkyv = "0.8.16"
bytecheck = "0.8.2"
tree-sitter = "0.22.6"
tree-sitter-typescript = "0.21.2"
rayon = "1.10.0"
crossbeam-channel = "0.5.12"
ignore = "0.4.22"
anyhow = "1.0.82"

[build-dependencies]
cc = "1.0.94"

[dev-dependencies]
tempfile = "3.27.0"
memmap2 = "0.9.10"
