[package]
name = "gnx-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rkyv = "0.8.16"
bytecheck = "0.8.2"
tree-sitter = "0.25"
tree-sitter-typescript = "*"
rayon = "1.10.0"
crossbeam-channel = "0.5.12"
ignore = "0.4.22"
anyhow = "1.0.82"
sha2 = "0.10.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs2 = "0.4"
url = "2.5"
unicode-normalization = "0.1"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

[build-dependencies]
cc = "1.0.94"

[dev-dependencies]
tempfile = "3.27.0"
memmap2 = "0.9.10"
