[package]
name = "graph-nexus-analyzer"
description = "Graph Nexus for LLM — multi-language tree-sitter parser and route detector (Rust, TypeScript, Python, Go, Java, Swift, etc.)"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
build = "build.rs"

[build-dependencies]
sha2 = "0.10.8"

[dependencies]
graph-nexus-core = { path = "../graph-nexus-core", version = "0.1.0" }
tree-sitter = "0.25"
tree-sitter-typescript = "*"
rayon = "1.10.0"
crossbeam-channel = "0.5.12"
ignore = "0.4.22"
anyhow = "1.0.82"
tracing = "0.1.40"
streaming-iterator = "0.1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter-rust = "*"
tree-sitter-python = "*"
tree-sitter-java = "*"
tree-sitter-go = "*"
tree-sitter-javascript = "*"
tree-sitter-php = "*"
tree-sitter-ruby = "*"
tree-sitter-kotlin = { git = "https://github.com/fwcd/tree-sitter-kotlin" }
tree-sitter-c-sharp = "*"
tree-sitter-c = "*"
tree-sitter-cpp = "*"
tree-sitter-swift = { path = "../vendor/tree-sitter-swift" }
tree-sitter-dart = "*"
tree-sitter-md = "*"
fastembed = "5"
hf-hub = "0.5.0"
tree-sitter-yaml = "0.7.2"
tree-sitter-lua = "0.5.0"
tree-sitter-bash = "0.25.1"
tree-sitter-solidity = "1.2.13"
tree-sitter-crystal = { git = "https://github.com/crystal-lang-tools/tree-sitter-crystal" }
tree-sitter-move = { path = "../vendor/tree-sitter-move" }
tree-sitter-containerfile = "0.8.0"
tree-sitter-hcl = "1.1.0"
tree-sitter-cairo = { path = "../vendor/tree-sitter-cairo" }
# tree-sitter-nim is not published to crates.io; using vendored alaviss/tree-sitter-nim
# (v0.6.2) which declares tree-sitter = "~0.25" — compatible with workspace "0.25".
tree-sitter-nim = { path = "../vendor/tree-sitter-nim" }
tree-sitter-verilog = "1.0.3"
tree-sitter-vyper = { path = "../vendor/tree-sitter-vyper" }
tree-sitter-sequel = "0.3.11"
tree-sitter-zig = "1.1.2"
rustc-hash = "2"

[lints]
workspace = true
