[package]
name = "graph-nexus"
description = "Graph Nexus for LLM — code intelligence graph for AI agents and LLMs (multi-language AST analysis)"
version = "0.1.0"
edition = "2021"
default-run = "gnx"
license.workspace = true
repository.workspace = true

# cargo-binstall 元資料：使 `cargo binstall graph-nexus` 直接抓 GitHub Release 預編 binary，
# 跳過 source compile。{ target } / { archive-suffix } / { binary-ext } 由 binstall 依平台自動代入。
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/gnx-v{ version }-{ target }{ archive-suffix }"
bin-dir = "gnx-v{ version }-{ target }/{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[[bin]]
name = "gnx"
path = "src/main.rs"

[lib]
name = "graph_nexus_cli"
path = "src/lib.rs"

[dependencies]
graph-nexus-core = { path = "../graph-nexus-core", version = "0.1.0" }
graph-nexus-analyzer = { path = "../graph-nexus-analyzer", version = "0.1.0" }
graph-nexus-mcp = { path = "../graph-nexus-mcp", version = "0.1.0" }
tokio = { version = "1", features = ["rt"] }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
memmap2 = "0.9.10"
rkyv = "0.8.16"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
etoon = "0.4"
ignore = "0.4.25"
libc = "0.2"
rayon = "1.10"
tantivy = "0.26.1"
tempfile = "3.27"
thiserror = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
unicode-width = "0.2"
regex = "1.12.3"
ratatui = "0.30"
crossterm = "0.29"
toml = "0.9"
rustc-hash = "2"
sha2 = "0.10.8"
hex = "0.4"
dialoguer = "0.11"
fs2 = "0.4"
notify = "6"
walkdir = "2"
uuid = { version = "1", features = ["v7"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }

[dev-dependencies]
serde_json = "1.0"

[lints]
workspace = true
