[package]
name = "graph-nexus-core"
description = "Graph Nexus for LLM — core graph storage and algorithms (zero-copy on-disk graph, registry, community detection)"
version = "0.1.4"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
rkyv = "0.8.16"
bytecheck = "0.8.2"
tree-sitter = "0.25"
tree-sitter-typescript = "*"
rayon = "1.10.0"
crossbeam-channel = "0.5.12"
ignore = "0.4.22"
anyhow = "1.0.82"
sha2 = "0.10.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs2 = "0.4"
url = "2.5"
unicode-normalization = "0.1"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
fixedbitset = "0.5.7"
rustc-hash = "2"
toml = "0.9"
regex = "1"
tracing = "0.1"
phf = { version = "0.11", features = ["macros"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }

[build-dependencies]
cc = "1.0.94"

[dev-dependencies]
tempfile = "3.27.0"
memmap2 = "0.9.10"
filetime = "0.2"
criterion = "0.8.2"

[lints]
workspace = true

[[bench]]
name = "bfs_bench"
harness = false
