[package]
name = "graph-nexus-mcp"
description = "MCP server library backing `gnx mcp serve` — zero-hardcode tool discovery via inventory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
graph-nexus-core = { path = "../graph-nexus-core", version = "0.1.0" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1"
inventory = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "process"] }
rmcp = { version = "1", features = ["server", "transport-io"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
